--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,6 +7,73 @@
   min-height: 100vh;
 }
 
+/*my styles*/
+
+.navbar {
+  position: absolute;
+  width: 100%;
+  height: 80px;
+  left: 0px;
+  top: 0px;
+
+  background: #000000;
+}
+
+.logo {
+  position: absolute;
+  width: 174px;
+  height: 23px;
+  left: 13px;
+  top: 29px;
+
+  font-family: 'Ruda';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 0px;
+  /* or 0% */
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+
+  color: #FFFFFF;
+
+  border: 1px solid #000000;
+}
+
+.navitems {
+  position: absolute;
+  height: 23px;
+  right: 0;
+  top: 29px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.navitem {
+  padding: 14px 16px;
+  text-decoration: none;
+  text-align: center;
+  font-family: 'Ruda';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 0px;
+  color: #FFFFFF;
+}
+
+.navitem:hover {
+  color: var(--hover-color);
+}
+
+/*end my styles*/
+
+
 .description {
   display: inherit;
   justify-content: inherit;
