--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,7 +10,8 @@
 /*my styles*/
 
 .navbar {
-  position: absolute;
+  position: fixed;
+  z-index: 50;
   width: 100%;
   height: 80px;
   left: 0px;
@@ -69,6 +70,17 @@
 
 .navitem:hover {
   color: var(--hover-color);
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  background-color: black;
+  color: white;
+  text-align: center;
 }
 
 /*end my styles*/
