--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,8 @@
   --color-grey: #D1D3D4;
   --color-white: #FFFFFF;
   --color-hover: #bd9e14;
+  --paper-color: #F1EDE9;
+  --paper-line: #94ACD4;
 }
 
 * {
