--- a/styles/DailyMenu.module.css
+++ b/styles/DailyMenu.module.css
@@ -47,6 +47,10 @@
   list-style: circle;
 }
 
+.paper li span {
+  font-style: italic;
+}
+
 @media screen and (max-width: 650px) {
     .notepadbody {
         padding: 20px 10px;
