--- a/styles/Menu.module.css
+++ b/styles/Menu.module.css
@@ -442,6 +442,8 @@ span.allergen.sea {
 
 .footer {
   margin-top: 1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
   font-weight: 700;
   text-transform: uppercase;
   font-size: 1.3rem;
@@ -459,8 +461,9 @@ span.allergen.sea {
 }
 .footer .socialitem i {
   display: inline-block;
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
+  margin-bottom: 10px;
   font-size: 2rem;
   font-weight: 700;
   text-align: center;
