--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -4,8 +4,10 @@
     justify-content: space-between;
     align-items: center;
     background: var(--color-black);
-
+    position: fixed;
+    top: 0;
     padding: 1rem 2rem;
+    z-index: 50;
 }
 
 .navbarlogo {
