--- a/styles/globals.css
+++ b/styles/globals.css
@@ -209,6 +209,7 @@ a {
     font-size: 45px;
     line-height: 70px;
   }
+
 }
 
 
@@ -235,3 +236,60 @@ a {
             transform: translateY(0);
   }
 }
+
+/* header*/
+
+.header__custom {
+	background: url('https://cdn.sanity.io/images/icbaw51l/production/7eeb54fb12770cd4e0f54a68cbf4f3ff442c56e6-1920x1280.jpg');
+	text-align: center;
+	width: 100%;
+	height: auto;
+	background-size: cover;
+	background-attachment: fixed;
+	position: relative;
+	overflow: hidden;
+	border-radius: 0 0 0 85% / 30%;
+}
+.header__custom .overlay{
+	width: 100%;
+	height: 100%;
+	padding: 50px;
+	color: #FFF;
+	text-shadow: 1px 1px 1px #333;
+  background-image: linear-gradient( 180deg, var(--color-black) 10%, #302b296b 100%);
+}
+
+.header__custom h1 {
+	font-family: 'Dancing Script', cursive;
+	font-size: 80px;
+	margin-bottom: 30px;
+}
+
+.header__custom h3, .header__custom p {
+	font-family: 'Open Sans', sans-serif;
+	margin-bottom: 30px;
+}
+
+.header__custom button {
+	border: none;
+	outline: none;
+	padding: 10px 20px;
+	border-radius: 50px;
+	color: #333;
+	background: #fff;
+	margin-bottom: 50px;
+	box-shadow: 0 3px 20px 0 #0000003b;
+}
+.header__custom button:hover{
+	cursor: pointer;
+  scale: 1.1;
+}
+
+@media screen and (max-width: 450px) {
+  .header__custom h1 {
+    font-size: 40px;
+    margin-bottom: 30px;
+  }
+}
+
+
