landing page done

--- a/styles/Landing.module.css
+++ b/styles/Landing.module.css
@@ -77,6 +77,7 @@
   flex-direction: column;
   overflow: hidden;
   padding-left: 30px;
+  margin-bottom: 20px;
   background: repeating-linear-gradient(#0000 0 calc(1.2rem - 1px),#66afe1 0 1.2rem) right bottom /100% 100%,linear-gradient(red 0 0) 30px 0/2px 100% #fff;
   background-repeat: no-repeat;
   line-height: 1.2rem;
